--- a/UI/LoginWidget.ui
+++ b/UI/LoginWidget.ui
@@ -106,6 +106,9 @@ border-radius:10px;
              <height>20</height>
             </size>
            </property>
+           <property name="styleSheet">
+            <string notr="true">color: rgb(31, 120, 255);</string>
+           </property>
            <property name="text">
             <string>ID</string>
            </property>
@@ -119,6 +122,11 @@ border-radius:10px;
              <height>40</height>
             </size>
            </property>
+           <property name="font">
+            <font>
+             <pointsize>10</pointsize>
+            </font>
+           </property>
            <property name="styleSheet">
             <string notr="true"/>
            </property>
@@ -131,6 +139,9 @@ border-radius:10px;
              <width>290</width>
              <height>20</height>
             </size>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">color: rgb(31, 120, 255);</string>
            </property>
            <property name="text">
             <string>Password</string>
