0825 그리드레이아웃에 유져 추가

--- a/Main/UI/OpenWidget.ui
+++ b/Main/UI/OpenWidget.ui
@@ -35,13 +35,14 @@
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="resource.qrc">:/open_page.png</pixmap>
+      <pixmap resource="../../img/icon/resource.qrc">:/open_page.png</pixmap>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <resources>
+  <include location="../../img/icon/resource.qrc"/>
   <include location="resource.qrc"/>
  </resources>
  <connections/>
