--- a/Main/UI/MainWidget.ui
+++ b/Main/UI/MainWidget.ui
@@ -219,6 +219,215 @@ QPushButton::hover{
         <property name="currentIndex">
          <number>0</number>
         </property>
+        <widget class="QWidget" name="admin_home_page">
+         <layout class="QHBoxLayout" name="horizontalLayout_16">
+          <property name="spacing">
+           <number>0</number>
+          </property>
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>40</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>70</number>
+          </property>
+          <item>
+           <spacer name="horizontalSpacer_5">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>147</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QWidget" name="widget_4" native="true">
+            <property name="minimumSize">
+             <size>
+              <width>820</width>
+              <height>0</height>
+             </size>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_16">
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_17">
+               <item>
+                <spacer name="horizontalSpacer_10">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+               <item>
+                <widget class="QLabel" name="label_12">
+                 <property name="minimumSize">
+                  <size>
+                   <width>92</width>
+                   <height>40</height>
+                  </size>
+                 </property>
+                 <property name="font">
+                  <font>
+                   <pointsize>13</pointsize>
+                  </font>
+                 </property>
+                 <property name="text">
+                  <string>부서조회</string>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignCenter</set>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QComboBox" name="admin_combobox">
+                 <property name="minimumSize">
+                  <size>
+                   <width>155</width>
+                   <height>40</height>
+                  </size>
+                 </property>
+                 <property name="font">
+                  <font>
+                   <pointsize>12</pointsize>
+                  </font>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">#admin_combobox{
+	border-radius:10px;
+	background-color: rgb(217, 217, 217);
+	padding-left:10px;}
+
+#admin_combobox::drop-down{
+	border:0px;
+}
+
+#admin_combobox::down-arrow{
+	image: url(:/down.png);
+	width: 15px;
+	height: 15px;
+	margin-right:15px;
+}
+#admin_combobox::on{
+ border:4px solid gray;
+}
+</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="pushButton_2">
+                 <property name="minimumSize">
+                  <size>
+                   <width>66</width>
+                   <height>40</height>
+                  </size>
+                 </property>
+                 <property name="font">
+                  <font>
+                   <pointsize>13</pointsize>
+                  </font>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">border-radius:10px;
+background-color: rgb(217, 217, 217);</string>
+                 </property>
+                 <property name="text">
+                  <string>확인</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <widget class="QScrollArea" name="scrollArea">
+               <property name="frameShape">
+                <enum>QFrame::NoFrame</enum>
+               </property>
+               <property name="widgetResizable">
+                <bool>true</bool>
+               </property>
+               <widget class="QWidget" name="scrollAreaWidgetContents">
+                <property name="geometry">
+                 <rect>
+                  <x>0</x>
+                  <y>0</y>
+                  <width>820</width>
+                  <height>356</height>
+                 </rect>
+                </property>
+                <layout class="QVBoxLayout" name="verticalLayout_17">
+                 <property name="leftMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="topMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="rightMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="bottomMargin">
+                  <number>0</number>
+                 </property>
+                 <item>
+                  <widget class="QFrame" name="frame">
+                   <property name="frameShape">
+                    <enum>QFrame::StyledPanel</enum>
+                   </property>
+                   <property name="frameShadow">
+                    <enum>QFrame::Raised</enum>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </widget>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_6">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>147</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </widget>
         <widget class="QWidget" name="home_page">
          <layout class="QHBoxLayout" name="horizontalLayout_9">
           <property name="leftMargin">
@@ -490,7 +699,7 @@ background-color: rgb(230, 234, 245);</string>
                         <string/>
                        </property>
                        <property name="pixmap">
-                        <pixmap resource="resource.qrc">:/attendance.png</pixmap>
+                        <pixmap resource="../../img/icon/resource.qrc">:/attendance.png</pixmap>
                        </property>
                        <property name="scaledContents">
                         <bool>true</bool>
@@ -601,7 +810,7 @@ background-color: rgb(230, 234, 245);</string>
                         <string/>
                        </property>
                        <property name="pixmap">
-                        <pixmap resource="resource.qrc">:/out.png</pixmap>
+                        <pixmap resource="../../img/icon/resource.qrc">:/out.png</pixmap>
                        </property>
                        <property name="scaledContents">
                         <bool>true</bool>
@@ -712,7 +921,7 @@ background-color: rgb(230, 234, 245);</string>
                         <string/>
                        </property>
                        <property name="pixmap">
-                        <pixmap resource="resource.qrc">:/absent.png</pixmap>
+                        <pixmap resource="../../img/icon/resource.qrc">:/absent.png</pixmap>
                        </property>
                        <property name="scaledContents">
                         <bool>true</bool>
@@ -1497,6 +1706,7 @@ border-radius: 10px;</string>
   </layout>
  </widget>
  <resources>
+  <include location="../../img/icon/resource.qrc"/>
   <include location="resource.qrc"/>
  </resources>
  <connections/>
