--- a/Main/UI/MainWidget.ui
+++ b/Main/UI/MainWidget.ui
@@ -217,7 +217,7 @@ QPushButton::hover{
       <item>
        <widget class="QStackedWidget" name="stackedWidget">
         <property name="currentIndex">
-         <number>0</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="admin_home_page">
          <layout class="QHBoxLayout" name="horizontalLayout_16">
@@ -286,7 +286,7 @@ QPushButton::hover{
                 </spacer>
                </item>
                <item>
-                <widget class="QLabel" name="label_12">
+                <widget class="QLabel" name="team_search_lab">
                  <property name="minimumSize">
                   <size>
                    <width>92</width>
@@ -307,7 +307,7 @@ QPushButton::hover{
                 </widget>
                </item>
                <item>
-                <widget class="QComboBox" name="admin_combobox">
+                <widget class="QComboBox" name="team_search_combobox">
                  <property name="minimumSize">
                   <size>
                    <width>155</width>
@@ -343,7 +343,7 @@ QPushButton::hover{
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButton_2">
+                <widget class="QPushButton" name="team_search_btn">
                  <property name="minimumSize">
                   <size>
                    <width>66</width>
@@ -602,7 +602,7 @@ background-color: rgb(255, 255, 255);
                 <item>
                  <layout class="QHBoxLayout" name="horizontalLayout_5">
                   <item>
-                   <widget class="QWidget" name="widget_3" native="true">
+                   <widget class="QWidget" name="attend_widget" native="true">
                     <property name="minimumSize">
                      <size>
                       <width>250</width>
@@ -629,7 +629,7 @@ border-radius:5px;</string>
                      <item>
                       <layout class="QVBoxLayout" name="verticalLayout_5">
                        <item>
-                        <widget class="QLabel" name="label_7">
+                        <widget class="QLabel" name="attend_day_lab">
                          <property name="maximumSize">
                           <size>
                            <width>60</width>
@@ -647,7 +647,7 @@ border-radius:5px;</string>
                         </widget>
                        </item>
                        <item>
-                        <widget class="QLabel" name="label_8">
+                        <widget class="QLabel" name="attend_text_lab">
                          <property name="maximumSize">
                           <size>
                            <width>60</width>
@@ -675,7 +675,7 @@ border-radius:5px;</string>
                       </spacer>
                      </item>
                      <item>
-                      <widget class="QLabel" name="label_9">
+                      <widget class="QLabel" name="attand_img_lab">
                        <property name="minimumSize">
                         <size>
                          <width>60</width>
@@ -713,7 +713,7 @@ background-color: rgb(230, 234, 245);</string>
                    </widget>
                   </item>
                   <item>
-                   <widget class="QWidget" name="widget_2" native="true">
+                   <widget class="QWidget" name="out_widget" native="true">
                     <property name="minimumSize">
                      <size>
                       <width>250</width>
@@ -740,7 +740,7 @@ border-radius:5px;</string>
                      <item>
                       <layout class="QVBoxLayout" name="verticalLayout_4">
                        <item>
-                        <widget class="QLabel" name="label_4">
+                        <widget class="QLabel" name="out_day_lab">
                          <property name="maximumSize">
                           <size>
                            <width>60</width>
@@ -758,7 +758,7 @@ border-radius:5px;</string>
                         </widget>
                        </item>
                        <item>
-                        <widget class="QLabel" name="label_5">
+                        <widget class="QLabel" name="out_text_lab">
                          <property name="maximumSize">
                           <size>
                            <width>60</width>
@@ -786,7 +786,7 @@ border-radius:5px;</string>
                       </spacer>
                      </item>
                      <item>
-                      <widget class="QLabel" name="label_6">
+                      <widget class="QLabel" name="out_img_lab">
                        <property name="minimumSize">
                         <size>
                          <width>60</width>
@@ -824,7 +824,7 @@ background-color: rgb(230, 234, 245);</string>
                    </widget>
                   </item>
                   <item>
-                   <widget class="QWidget" name="widget" native="true">
+                   <widget class="QWidget" name="absent_widget" native="true">
                     <property name="minimumSize">
                      <size>
                       <width>250</width>
@@ -851,7 +851,7 @@ border-radius:5px;</string>
                      <item>
                       <layout class="QVBoxLayout" name="verticalLayout_3">
                        <item>
-                        <widget class="QLabel" name="label">
+                        <widget class="QLabel" name="absent_day_lab">
                          <property name="maximumSize">
                           <size>
                            <width>60</width>
@@ -869,7 +869,7 @@ border-radius:5px;</string>
                         </widget>
                        </item>
                        <item>
-                        <widget class="QLabel" name="label_2">
+                        <widget class="QLabel" name="absent_text_lab">
                          <property name="maximumSize">
                           <size>
                            <width>60</width>
@@ -897,7 +897,7 @@ border-radius:5px;</string>
                       </spacer>
                      </item>
                      <item>
-                      <widget class="QLabel" name="label_3">
+                      <widget class="QLabel" name="absent_img_lab">
                        <property name="minimumSize">
                         <size>
                          <width>60</width>
@@ -953,7 +953,7 @@ background-color: rgb(230, 234, 245);</string>
                  </spacer>
                 </item>
                 <item>
-                 <widget class="QWidget" name="widget_5" native="true">
+                 <widget class="QWidget" name="home_bottom_widget_2" native="true">
                   <property name="minimumSize">
                    <size>
                     <width>0</width>
@@ -980,13 +980,13 @@ background-color: rgb(230, 234, 245);</string>
                     <number>0</number>
                    </property>
                    <item>
-                    <widget class="QWidget" name="widget_6" native="true">
+                    <widget class="QWidget" name="graph_widget_1" native="true">
                      <layout class="QVBoxLayout" name="verticalLayout_7">
                       <item>
                        <layout class="QVBoxLayout" name="verticalLayout_6"/>
                       </item>
                       <item>
-                       <widget class="QLabel" name="label_10">
+                       <widget class="QLabel" name="graph_contents_1">
                         <property name="maximumSize">
                          <size>
                           <width>16777215</width>
@@ -1002,13 +1002,13 @@ background-color: rgb(230, 234, 245);</string>
                     </widget>
                    </item>
                    <item>
-                    <widget class="QWidget" name="widget_7" native="true">
+                    <widget class="QWidget" name="graph_widget_2" native="true">
                      <layout class="QVBoxLayout" name="verticalLayout_8">
                       <item>
                        <layout class="QVBoxLayout" name="verticalLayout_9"/>
                       </item>
                       <item>
-                       <widget class="QLabel" name="label_11">
+                       <widget class="QLabel" name="graph_contents_2">
                         <property name="maximumSize">
                          <size>
                           <width>16777215</width>
@@ -1120,7 +1120,7 @@ background-color: rgb(230, 234, 245);</string>
                 </spacer>
                </item>
                <item>
-                <widget class="QLabel" name="label_16">
+                <widget class="QLabel" name="attend_check_lab">
                  <property name="font">
                   <font>
                    <pointsize>13</pointsize>
@@ -1132,7 +1132,7 @@ background-color: rgb(230, 234, 245);</string>
                 </widget>
                </item>
                <item>
-                <widget class="QComboBox" name="comboBox">
+                <widget class="QComboBox" name="attend_check_combobox">
                  <property name="minimumSize">
                   <size>
                    <width>156</width>
@@ -1173,7 +1173,7 @@ background-color: rgb(230, 234, 245);</string>
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButton">
+                <widget class="QPushButton" name="attend_check_btn">
                  <property name="minimumSize">
                   <size>
                    <width>66</width>
@@ -1232,7 +1232,7 @@ background-color: rgb(217, 217, 217);</string>
              </widget>
             </item>
             <item>
-             <widget class="QLabel" name="label_15">
+             <widget class="QLabel" name="summary_lab">
               <property name="minimumSize">
                <size>
                 <width>960</width>
@@ -1326,7 +1326,7 @@ height: 40px;
               <number>0</number>
              </property>
              <item>
-              <widget class="QWidget" name="widget_13" native="true">
+              <widget class="QWidget" name="my_page_widget" native="true">
                <property name="maximumSize">
                 <size>
                  <width>16777215</width>
