--- a/Main/UI/UserCell.ui
+++ b/Main/UI/UserCell.ui
@@ -31,6 +31,12 @@
    </property>
    <item>
     <widget class="QFrame" name="frame">
+     <property name="minimumSize">
+      <size>
+       <width>250</width>
+       <height>100</height>
+      </size>
+     </property>
      <property name="maximumSize">
       <size>
        <width>250</width>
@@ -51,22 +57,22 @@
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <property name="leftMargin">
-       <number>34</number>
+       <number>9</number>
       </property>
       <property name="topMargin">
-       <number>20</number>
+       <number>9</number>
       </property>
       <property name="rightMargin">
-       <number>34</number>
+       <number>9</number>
       </property>
       <property name="bottomMargin">
-       <number>20</number>
+       <number>9</number>
       </property>
       <item>
        <widget class="QFrame" name="frame_2">
         <property name="minimumSize">
          <size>
-          <width>166</width>
+          <width>200</width>
           <height>0</height>
          </size>
         </property>
@@ -76,6 +82,9 @@
           <height>16777215</height>
          </size>
         </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(255, 255, 255);</string>
+        </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
@@ -84,7 +93,7 @@
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <property name="spacing">
-          <number>18</number>
+          <number>10</number>
          </property>
          <property name="leftMargin">
           <number>0</number>
@@ -99,31 +108,90 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QLabel" name="img_lab">
+          <widget class="QWidget" name="widget" native="true">
+           <property name="maximumSize">
+            <size>
+             <width>156</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <layout class="QHBoxLayout" name="horizontalLayout_4">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="QLabel" name="img_lab">
+              <property name="minimumSize">
+               <size>
+                <width>50</width>
+                <height>50</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>50</width>
+                <height>50</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true"/>
+              </property>
+              <property name="text">
+               <string>img</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="name_lab">
+              <property name="text">
+               <string>name</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="del_btn">
            <property name="minimumSize">
             <size>
-             <width>50</width>
-             <height>50</height>
+             <width>40</width>
+             <height>40</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>50</width>
-             <height>50</height>
+             <width>40</width>
+             <height>40</height>
             </size>
            </property>
            <property name="styleSheet">
-            <string notr="true"/>
+            <string notr="true">#close_btn::hover{
+border: 1px solid #3C82F2;
+	background-color: transparent;
+}</string>
            </property>
            <property name="text">
-            <string>img</string>
+            <string/>
            </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="name_lab">
-           <property name="text">
-            <string>name</string>
+           <property name="icon">
+            <iconset resource="../../img/icon/resource.qrc">
+             <normaloff>:/interface.png</normaloff>:/interface.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>40</width>
+             <height>40</height>
+            </size>
            </property>
           </widget>
          </item>
@@ -135,6 +203,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../img/icon/resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
