--- a/Main/UI/warning_dialog.ui
+++ b/Main/UI/warning_dialog.ui
@@ -19,9 +19,14 @@ border:1px solid rgb(45,45,45);
 border-radius:20px;
 	background-color: rgb(255, 255, 255);
 }
-QPushButton{
+QPushButton#ok_btn{
 	background-color: rgb(48, 133, 254);
 	color:white;
+	border-radius:10px;
+}
+QPushButton#cance_btn{
+	background-color: #E6E6E6;
+	color: #252C58;
 	border-radius:10px;
 }</string>
   </property>
@@ -101,7 +106,7 @@ QPushButton{
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>130</height>
+          <height>180</height>
          </size>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -168,6 +173,33 @@ QPushButton{
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QPushButton" name="cancel_btn">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>40</height>
+            </size>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>11</pointsize>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true"/>
+           </property>
+           <property name="text">
+            <string>취소</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </item>
@@ -182,7 +214,7 @@ QPushButton{
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>40</height>
+          <height>35</height>
          </size>
         </property>
        </spacer>
