--- a/Main/UI/AddEmployee.ui
+++ b/Main/UI/AddEmployee.ui
@@ -237,7 +237,7 @@ height: 40px;
               </font>
              </property>
              <property name="readOnly">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
             </widget>
            </item>
@@ -303,7 +303,7 @@ height: 40px;
               </font>
              </property>
              <property name="readOnly">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
             </widget>
            </item>
@@ -369,7 +369,7 @@ height: 40px;
               </font>
              </property>
              <property name="readOnly">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
             </widget>
            </item>
@@ -414,7 +414,7 @@ height: 40px;
               </font>
              </property>
              <property name="readOnly">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
             </widget>
            </item>
@@ -588,7 +588,7 @@ border-radius:10px;</string>
  </widget>
  <resources>
   <include location="../../img/icon/resource.qrc"/>
-  <include location="../../../../AppData/Local/Programs/Python/Python311/Lib/site-packages/qt5_applications/img/icon/resource.qrc"/>
+  <include location="../../img/icon/resource.qrc"/>
  </resources>
  <connections/>
 </ui>
