--- a/Main/UI/warning_dialog.ui
+++ b/Main/UI/warning_dialog.ui
@@ -24,7 +24,7 @@ QPushButton#ok_btn{
 	color:white;
 	border-radius:10px;
 }
-QPushButton#cance_btn{
+QPushButton#cancel_btn{
 	background-color: #E6E6E6;
 	color: #252C58;
 	border-radius:10px;
@@ -70,6 +70,9 @@ QPushButton#cance_btn{
       <item>
        <widget class="QWidget" name="top_widget" native="true">
         <layout class="QHBoxLayout" name="horizontalLayout">
+         <property name="topMargin">
+          <number>30</number>
+         </property>
          <item>
           <widget class="QLabel" name="icon_lab">
            <property name="minimumSize">
